---
config:
    layout: elk
---
stateDiagram-v2
    FOLLOWER: FOLLOWER<br>• Wait for heartbeats<br>• Respond to AppendEntries & RequestVote<br>• Randomized election timer (1500–2000 ms)
    CANDIDATE: CANDIDATE<br>• Increment term<br>• Vote for self<br>• Send RequestVote RPCs<br>• Count majority to win
    LEADER: LEADER<br>• Send AppendEntries heartbeats (750 ms)<br>• Maintain leadership until higher term

    [*] --> FOLLOWER : Startup
    FOLLOWER --> CANDIDATE : Election timeout<br>(no heartbeat)
    CANDIDATE --> LEADER : Wins majority votes
    CANDIDATE --> FOLLOWER : Receives AppendEntries<br>(higher/equal term)
    LEADER --> FOLLOWER : Receives higher term
    LEADER --> LEADER : Periodic heartbeats<br>(AppendEntries)
    CANDIDATE --> CANDIDATE : Election timeout<br>(no quorum)
    FOLLOWER --> FOLLOWER : Reset timer<br>on valid heartbeat
